fix(css): update visibility rules for bonus and in-stock items in catalog block

--- a/bitrix/templates/aspro-premier-mobile_copy/css/custom.css
+++ b/bitrix/templates/aspro-premier-mobile_copy/css/custom.css
@@ -24,6 +24,7 @@
     padding-block: 0;
 }
 
-.catalog-block .aspro-bonus-wrapper .aspro-bonus {
+.catalog-block .aspro-bonus-wrapper .aspro-bonus,
+.catalog-block .instock {
     display: none !important;
 }
