--- a/bitrix/templates/aspro-premier_copy/css/custom.css
+++ b/bitrix/templates/aspro-premier_copy/css/custom.css
@@ -63,6 +63,7 @@
 	width: 100%;
 }
 
-.catalog-block .aspro-bonus-wrapper .aspro-bonus {
-	display: none !important;
+.catalog-block .aspro-bonus-wrapper .aspro-bonus,
+.catalog-block .catalog-block__item .instock {
+    display: none !important;
 }
